scribble-test/src/test/resources/bad/syntax/disamb/modules/Modules04a.scr
module bad.syntax.disamb.modules.Modules04a;

import bad.syntax.disamb.modules.Modules04a;

